--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Chez Joséphine",
-  "name": "Chez Joséphine",
+  "short_name": "20hvin",
+  "name": "20h Vin",
   "icons": [
     {
       "src": "favicon.ico",
